# BarBabes

./: .gitignore  README.md  package-lock.json
apps/mobile/: DEVELOPMENT_BUILD.md  README.md  app.json  package-lock.json  package.json  tailwind.config.js
apps/mobile/android/: settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/bartender/: index.tsx
apps/mobile/app/group/: index.tsx
apps/mobile/app/scan/: index.tsx  rejected.tsx  success.tsx
apps/mobile/app/sobriety/: index.tsx  reaction.tsx  result.tsx  straight-line.tsx  typing.tsx
apps/mobile/components/: design-tokens.ts
backend/: .env  .env.example  api_int.py  calc.py  pyproject.toml  requirements.txt  seed_data.py
backend/app/: __init__.py  config.py  crud.py  db.py  logic.py  main.py  models.py  widmark.py
backend/app/routers/: bac.py  drinks.py  groups.py  sobriety.py  users.py
backend/app/services/: drink_validation.py  gemini_sobriety.py  indexes.py
frontend/: app.json  package-lock.json  package.json
frontend/app/: MainLayout.jsx  index.jsx  profile.jsx
frontend/app/components/: BottomNavBar.jsx  TopNavBar.jsx
frontend/app/context/: UserContext.js
frontend/app/data/: contacts.js
frontend/app/screens/Dashboard/: Dashboard.jsx  GroupMapScreen.jsx  index.jsx
frontend/app/screens/Group/: CreateGroup.jsx  GroupScreen.jsx
frontend/app/screens/Home/: HomeScreen.jsx
frontend/app/screens/Profile/: index.jsx
frontend/app/screens/User/: Login.jsx  Profile.jsx  SignIn.jsx
scripts/: archive_session.py
(+4 files in other folders)
