[project]
name = "saferound-backend"
version = "0.1.0"
description = "SafeRound safety app API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "motor>=3.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "snowflake-connector-python>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
